--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 annotated-types==0.5.0
 anyio==3.7.1
 certifi==2023.7.22
+cffi==1.16.0
 click==8.1.7
+cryptography==41.0.4
 dnspython==2.4.2
 email-validator==2.0.0.post2
 fastapi==0.103.2
+greenlet==3.0.0
 h11==0.14.0
 httpcore==0.18.0
 httptools==0.6.0
@@ -14,6 +17,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.7
+pycparser==2.21
 pydantic==2.4.2
 pydantic-extra-types==2.1.0
 pydantic-settings==2.0.3
