--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ charset-normalizer==3.3.1
 click==8.1.7
 cryptography==41.0.4
 dnspython==2.4.2
+ecdsa==0.18.0
 email-validator==2.0.0.post2
 fastapi==0.103.2
 greenlet==3.0.0
@@ -22,6 +23,8 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 orjson==3.9.7
+passlib==1.7.4
+pyasn1==0.5.0
 pycparser==2.21
 pydantic==2.4.2
 pydantic-extra-types==2.1.0
@@ -30,9 +33,11 @@ pydantic_core==2.10.1
 PyMySQL==1.1.0
 pyodbc==5.0.1
 python-dotenv==1.0.0
+python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 requests==2.31.0
+rsa==4.9
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
