--- a/requirements.txt
+++ b/requirements.txt
@@ -34,14 +34,17 @@ pydantic_core==2.10.1
 PyMySQL==1.1.0
 pyodbc==5.0.1
 python-dotenv==1.0.0
+python-http-client==3.3.7
 python-jose==3.3.0
 python-multipart==0.0.6
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
+sendgrid==6.10.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
+starkbank-ecdsa==2.2.0
 starlette==0.27.0
 typing_extensions==4.8.0
 ujson==5.8.0
