--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ idna==3.4
 isodate==0.6.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
+mailersend==0.5.6
 MarkupSafe==2.1.3
 orjson==3.9.7
 passlib==1.7.4
@@ -40,7 +41,6 @@ python-multipart==0.0.6
 PyYAML==6.0.1
 requests==2.31.0
 rsa==4.9
-sendgrid==6.10.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
