--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ cryptography==41.0.4
 dnspython==2.4.2
 ecdsa==0.18.0
 email-validator==2.0.0.post2
+et-xmlfile==1.1.0
 fastapi==0.103.2
 greenlet==3.0.0
 h11==0.14.0
@@ -25,6 +26,7 @@ Jinja2==3.1.2
 mailersend==0.5.6
 MarkupSafe==2.1.3
 numpy==1.26.2
+openpyxl==3.1.2
 orjson==3.9.7
 pandas==2.1.3
 passlib==1.7.4
